@@ -1,5 +1,8 @@
 This directory contains the Simple Python Fixed-Point Module
 
+Please note that from release 1.0 onwards,
+this package requires python-3.0 or later.
+
 All files are released under the Python PSF License
 (see http://www.python.org/psf/license)
 and are Copyright 2006-2008 RW Penney.
